--- a/FMS/Views/Main/LiveForklfitsPage.xaml
+++ b/FMS/Views/Main/LiveForklfitsPage.xaml
@@ -1,14 +1,262 @@
-﻿<Page x:Class="FMS.Views.Main.LiveForklfitsPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:FMS.Views.Main"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="LiveForklfitsPage">
-
+﻿<Page
+    x:Class="FMS.Views.Main.LiveForklfitsPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:conv="clr-namespace:FMS.ViewModels.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:FMS.Views.Main"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    Title="LiveForklfitsPage"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <Page.Resources>
+        <conv:BoolToVIsibilityConverter x:Key="BoolToVisibility" />
+    </Page.Resources>
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0">
+            <StackPanel>
+                <TextBlock
+                    Height="50"
+                    Margin="0"
+                    Padding="15,10"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Center"
+                    Background="DarkCyan"
+                    FontSize="18"
+                    FontWeight="Bold"
+                    Foreground="White"
+                    Opacity="1"
+                    Text="Wybierz wózek"
+                    TextAlignment="Center" />
+                <Separator Height="5" Margin="0,0,0,0" />
+                <ComboBox
+                    Width="250"
+                    Height="40"
+                    IsDropDownOpen="{Binding IsComboboxOpen, Mode=TwoWay}"
+                    ItemsSource="{Binding OnlineForklifts}"
+                    SelectedItem="{Binding SelectedForklift}"
+                    SelectedValuePath="Id">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <TextBlock FontWeight="Bold">
+                                    <Run Text="{Binding Name}" />
+                                    <Run Text="{Binding IpAdress}" />
+                                </TextBlock>
+                            </Grid>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                    <ComboBox.ItemContainerStyle>
+                        <Style TargetType="ComboBoxItem">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="ComboBoxItem">
+                                        <ui:Button
+                                            Width="250"
+                                            Height="40"
+                                            HorizontalContentAlignment="Stretch"
+                                            Background="Transparent"
+                                            BorderBrush="Transparent"
+                                            Command="{Binding RelativeSource={RelativeSource AncestorType=ComboBox}, Path=DataContext.SelectForkliftFromList}"
+                                            CommandParameter="{Binding Id}"
+                                            MouseOverBackground="DarkMagenta">
+                                            <ContentPresenter />
+                                        </ui:Button>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </ComboBox.ItemContainerStyle>
+                </ComboBox>
+                <Separator Height="5" Margin="0,0,0,0" />
+                <TextBlock
+                    Height="50"
+                    Margin="0"
+                    Padding="15,10"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Center"
+                    Background="DarkCyan"
+                    FontSize="18"
+                    FontWeight="Bold"
+                    Foreground="White"
+                    Opacity="1"
+                    Text="Wybierz stronę"
+                    TextAlignment="Center" />
+                <Separator Height="5" Margin="0,0,0,0" />
+                <ui:Button
+                    Width="250"
+                    Height="50"
+                    HorizontalContentAlignment="Left"
+                    Command="{Binding ActualParametersPageButtonClick}"
+                    MouseOverBackground="DarkCyan">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Image Grid.Column="0" Source="/Models/Resources/Icons/LiveParametersPageWhite.png" />
+                        <TextBlock
+                            Grid.Column="1"
+                            Margin="15,0,0,0"
+                            VerticalAlignment="Center"
+                            FontSize="18"
+                            FontWeight="Bold"
+                            Foreground="White"
+                            Text="Live data" />
+                    </Grid>
+                </ui:Button>
+                <Separator Height="5" Margin="0,0,0,0" />
+                <ui:Button
+                    Width="250"
+                    Height="50"
+                    HorizontalContentAlignment="Left"
+                    Command="{Binding WorkstatesPageButtonClick}"
+                    MouseOverBackground="DarkCyan">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Image Grid.Column="0" Source="/Models/Resources/Icons/WorkstatesPageWhite.png" />
+                        <TextBlock
+                            Grid.Column="1"
+                            Margin="15,0,0,0"
+                            VerticalAlignment="Center"
+                            FontSize="18"
+                            FontWeight="Bold"
+                            Foreground="White"
+                            Text="Maszyna stanów" />
+                    </Grid>
+                </ui:Button>
+                <Separator Height="5" Margin="0,0,0,0" />
+                <ui:Button
+                    Width="250"
+                    Height="50"
+                    HorizontalContentAlignment="Left"
+                    Command="{Binding SafetyDataPageButtonClick}"
+                    MouseOverBackground="DarkCyan">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Image Grid.Column="0" Source="/Models/Resources/Icons/SafetyDataPageWhite.png" />
+                        <TextBlock
+                            Grid.Column="1"
+                            Margin="15,0,0,0"
+                            VerticalAlignment="Center"
+                            FontSize="18"
+                            FontWeight="Bold"
+                            Foreground="White"
+                            Text="Urządzenia safety" />
+                    </Grid>
+                </ui:Button>
+                <Separator Height="5" Margin="0,0,0,0" />
+                <ui:Button
+                    Width="250"
+                    Height="50"
+                    HorizontalContentAlignment="Left"
+                    Command="{Binding AutoModeStartupPageButtonClick}"
+                    MouseOverBackground="DarkCyan">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Image Grid.Column="0" Source="/Models/Resources/Icons/StartupStatusPageWhite.png" />
+                        <TextBlock
+                            Grid.Column="1"
+                            Margin="15,0,0,0"
+                            VerticalAlignment="Center"
+                            FontSize="18"
+                            FontWeight="Bold"
+                            Foreground="White"
+                            Text="Statusy uruchomienia" />
+                    </Grid>
+                </ui:Button>
+                <Separator Height="5" Margin="0,0,0,0" />
+                <ui:Button
+                    Width="250"
+                    Height="50"
+                    HorizontalContentAlignment="Left"
+                    Command="{Binding ErrorsPageButtonClick}"
+                    MouseOverBackground="DarkCyan">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Image Grid.Column="0" Source="/Models/Resources/Icons/ErrorsPageWhite.png" />
+                        <TextBlock
+                            Grid.Column="1"
+                            Margin="15,0,0,0"
+                            VerticalAlignment="Center"
+                            FontSize="18"
+                            FontWeight="Bold"
+                            Foreground="White"
+                            Text="Błedy urządzeń" />
+                    </Grid>
+                </ui:Button>
+                <Separator Height="5" Margin="0,0,0,0" />
+                <ui:Button
+                    Width="250"
+                    Height="50"
+                    HorizontalContentAlignment="Left"
+                    Command="{Binding LidarLocPageButtonClick}"
+                    MouseOverBackground="DarkCyan">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Image Grid.Column="0" Source="/Models/Resources/Icons/SickWhiteLogo.png" />
+                        <TextBlock
+                            Grid.Column="1"
+                            Margin="15,0,0,0"
+                            VerticalAlignment="Center"
+                            FontSize="18"
+                            FontWeight="Bold"
+                            Foreground="White"
+                            Text="SICK® LidarLoc" />
+                    </Grid>
+                </ui:Button>
+                <Separator Height="5" Margin="0,0,0,0" />
+                <ui:Button
+                    Width="250"
+                    Height="50"
+                    HorizontalContentAlignment="Left"
+                    Command="{Binding ForkliftConfigurationPageButtonClick}"
+                    MouseOverBackground="DarkCyan">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Image Grid.Column="0" Source="/Models/Resources/Icons/ForkliftSettingsPageWhite.png" />
+                        <TextBlock
+                            Grid.Column="1"
+                            Margin="15,0,0,0"
+                            VerticalAlignment="Center"
+                            FontSize="18"
+                            FontWeight="Bold"
+                            Foreground="White"
+                            Text="Ustawienia wózka" />
+                    </Grid>
+                </ui:Button>
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Column="1">
+            <Frame
+                x:Name="PageContainer"
+                Grid.Row="1"
+                Content="{Binding CurrentLivePage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                NavigationUIVisibility="Hidden" />
+        </Grid>
     </Grid>
 </Page>
