--- a/FMS/Views/Main/UsersPage.xaml
+++ b/FMS/Views/Main/UsersPage.xaml
@@ -1,14 +1,226 @@
-﻿<Page x:Class="FMS.Views.Main.UsersPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:FMS.Views.Main"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="UsersPage">
+﻿<Page
+    x:Class="FMS.Views.Main.UsersPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:conv="clr-namespace:FMS.ViewModels.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:FMS.Views.Main"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    Title="UsersPage"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
 
+    <Page.Resources>
+        <conv:BoolToVIsibilityConverter x:Key="BoolToVisibility" />
+    </Page.Resources>
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="250" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="auto" />
+        </Grid.ColumnDefinitions>
+        <!--#region  Saved forklifts list-->
+        <Grid Grid.Column="0">
+            <StackPanel Width="auto" Margin="30,10,0,0">
+                <TextBlock
+                    Margin="0"
+                    Padding="15,10"
+                    HorizontalAlignment="Stretch"
+                    Background="Transparent"
+                    FontSize="22"
+                    FontWeight="ExtraBold"
+                    Style="{StaticResource TitleStyle}"
+                    Text="Zarejestrowani użytkownicy:"
+                    TextAlignment="Left"
+                    TextWrapping="Wrap" />
+                <Separator Height="5" />
+                <ItemsControl Height="1000" ItemsSource="{Binding Users}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <ui:Button
+                                Width="250"
+                                Height="50"
+                                HorizontalContentAlignment="Stretch"
+                                Background="Transparent"
+                                BorderBrush="Transparent"
+                                Command="{Binding RelativeSource={RelativeSource AncestorType=ItemsControl}, Path=DataContext.SelectUserFromList}"
+                                CommandParameter="{Binding Id}"
+                                Content="{Binding Username}"
+                                FontSize="20"
+                                Foreground="White"
+                                MouseOverBackground="DarkCyan"
+                                MouseOverBorderBrush="Aqua" />
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </StackPanel>
+        </Grid>
+        <!--#endregion-->
+        <!--#region Editable parameters-->
+        <Grid Grid.Column="1" HorizontalAlignment="Center">
+            <StackPanel VerticalAlignment="Center">
+                <StackPanel Orientation="Horizontal">
+                    <StackPanel Height="300" Margin="100,20,0,0">
+                        <TextBlock
+                            Margin="0"
+                            Padding="15,10"
+                            HorizontalAlignment="Stretch"
+                            Background="Transparent"
+                            FontSize="20"
+                            FontWeight="Bold"
+                            Style="{StaticResource TitleStyle}"
+                            Text="Nazwa użytkownika"
+                            TextAlignment="Left" />
+                        <Separator Height="15" Margin="0,0,0,0" />
+                        <TextBlock
+                            Margin="0"
+                            Padding="15,10"
+                            HorizontalAlignment="Stretch"
+                            Background="Transparent"
+                            FontSize="20"
+                            FontWeight="Bold"
+                            Style="{StaticResource TitleStyle}"
+                            Text="Hasło"
+                            TextAlignment="Left" />
+                        <Separator Height="15" Margin="0,0,0,0" />
+                        <TextBlock
+                            Margin="0"
+                            Padding="15,10"
+                            HorizontalAlignment="Stretch"
+                            Background="Transparent"
+                            FontSize="20"
+                            FontWeight="Bold"
+                            Style="{StaticResource TitleStyle}"
+                            Text="Potwierdź hasło"
+                            TextAlignment="Left" />
+                        <Separator Height="15" Margin="0,0,0,0" />
+                        <TextBlock
+                            Margin="0"
+                            Padding="15,10"
+                            HorizontalAlignment="Stretch"
+                            Background="Transparent"
+                            FontSize="20"
+                            FontWeight="Bold"
+                            Style="{StaticResource TitleStyle}"
+                            Text="Uprawnienia"
+                            TextAlignment="Left" />
+                    </StackPanel>
+                    <StackPanel Height="300" Margin="20,23,0,0">
+                        <TextBox
+                            MinWidth="200"
+                            VerticalAlignment="Center"
+                            FontSize="24"
+                            Text="{Binding EditedUser.Username}"
+                            TextAlignment="Center" />
+                        <Separator Height="15" Margin="0,-5,0,0" />
+                        <ui:PasswordBox
+                            MinWidth="200"
+                            VerticalAlignment="Center"
+                            FontSize="24"
+                            RevealButtonEnabled="False"
+                            Text="{Binding EditedUser.Password}"
+                            TextAlignment="Center" />
+                        <Separator Height="15" Margin="0,-5,0,0" />
+                        <ui:PasswordBox
+                            MinWidth="200"
+                            VerticalAlignment="Center"
+                            FontSize="24"
+                            Text="{Binding CheckPassword}"
+                            TextAlignment="Center" />
+                        <Separator Height="25" Margin="0,-5,0,0" />
+                        <StackPanel Orientation="Horizontal">
+                            <RadioButton Content="Klient" IsChecked="{Binding EditedUser.Client}" />
+                            <RadioButton Content="Instalator" IsChecked="{Binding EditedUser.Installator}" />
+                            <RadioButton Content="Administrator" IsChecked="{Binding EditedUser.Admin}" />
+                        </StackPanel>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel Margin="50,0,0,0" Orientation="Horizontal">
+                    <ui:Button
+                        Width="180"
+                        Height="40"
+                        Appearance="Success"
+                        Background="White"
+                        Command="{Binding AddNewUserButtonClick}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Image
+                                Grid.Column="0"
+                                Width="30"
+                                Height="30"
+                                Source="/Models/Resources/Icons/SaveBlack.png" />
+                            <TextBlock
+                                Grid.Column="1"
+                                Margin="5,0,0,0"
+                                FontSize="20"
+                                FontWeight="Bold"
+                                Foreground="Black"
+                                Text="Zapisz" />
+                        </Grid>
+                    </ui:Button>
+                    <Separator Width="10" />
+                    <ui:Button
+                        Width="180"
+                        Height="40"
+                        Appearance="Primary"
+                        Background="White"
+                        Command="{Binding UpdateUserButtonClick}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Image
+                                Grid.Column="0"
+                                Width="30"
+                                Height="30"
+                                Source="/Models/Resources/Icons/UpdateBlack.png" />
+                            <TextBlock
+                                Grid.Column="1"
+                                Margin="5,0,0,0"
+                                FontSize="20"
+                                FontWeight="Bold"
+                                Foreground="Black"
+                                Text="Aktualizuj" />
+                        </Grid>
+                    </ui:Button>
+                    <Separator Width="10" />
+                    <ui:Button
+                        Width="180"
+                        Height="40"
+                        Appearance="Danger"
+                        Background="White"
+                        Command="{Binding DeleteUserButtonClick}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Image
+                                Grid.Column="0"
+                                Width="30"
+                                Height="30"
+                                Source="/Models/Resources/Icons/DeleteBlack.png" />
+                            <TextBlock
+                                Grid.Column="1"
+                                Margin="5,0,0,0"
+                                FontSize="20"
+                                FontWeight="Bold"
+                                Foreground="Black"
+                                Text="Usuń" />
+                        </Grid>
+                    </ui:Button>
+                    <Separator Width="10" />
+
+                </StackPanel>
+            </StackPanel>
+        </Grid>
+        <!--#endregion-->
+
     </Grid>
 </Page>
